# gen_unnamed_pipe

./: Dockerfile  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gen_unnamed_pipe_bug_report.md  gen_unnamed_pipe_feature_request.md
.github/workflows/: gen_unnamed_pipe_docker_checker.yml  gen_unnamed_pipe_package.yml  gen_unnamed_pipe_package_checker.yml  gen_unnamed_pipe_py_checker.yml  gen_unnamed_pipe_python2_publish.yml  gen_unnamed_pipe_python3_build.yml  gen_unnamed_pipe_python3_publish.yml  gen_unnamed_pipe_python_checker.yml  gen_unnamed_pipe_toc.yml  gen_unnamed_pipe_triage.yml  gen_unnamed_pipe_triage_label.yml
docs/source/: conf.py  gen_unnamed_pipe.pro.config.pro_name.rst  gen_unnamed_pipe.pro.config.template_dir.rst  gen_unnamed_pipe.pro.read_template.rst  gen_unnamed_pipe.pro.rst  gen_unnamed_pipe.pro.write_template.rst  gen_unnamed_pipe.rst  index.rst  modules.rst
gen_unnamed_pipe/: __init__.py
gen_unnamed_pipe/conf/: gen_unnamed_pipe.cfg  gen_unnamed_pipe.logo  project.yaml
gen_unnamed_pipe/conf/template/: unp.template  unp_read.template  unp_write.template
gen_unnamed_pipe/conf/template/posix/: unp_close.template  unp_make.template
gen_unnamed_pipe/pro/: __init__.py  read_template.py  write_template.py
gen_unnamed_pipe/pro/config/: __init__.py  pro_name.py  template_dir.py
gen_unnamed_pipe/run/: gen_unnamed_pipe_run.py
python-tool/conf/: gen_unnamed_pipe.cfg
python-tool/conf/template/: .editorconfig
python-tool/log/: .editorconfig
tests/: .coverage  gen_unnamed_pipe  gen_unnamed_pipe_coverage.json  gen_unnamed_pipe_coverage.xml  gen_unnamed_pipe_test.py  run_coverage.sh
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_58479a017d06e93c___init___py.html  z_58479a017d06e93c_read_template_py.html  z_58479a017d06e93c_write_template_py.html  z_c59f2450adabd96b___init___py.html
tests/mytool/: unp.h  unp_close.c  unp_make.c  unp_read.c  unp_write.c
